# SUACA

./: .gitignore  test.c
Kolloquium/: Pipeline.tex  header.tex  kolloquium.bcf  kolloquium.tex
Thesis/: cites.bib  header.tex  thesis.tex
Thesis/Chapters/: Pipeline.tex  algorithms.tex  conclusion.tex  eval.tex  functionality.tex  introduction.tex  titlepage.tex
Thesis/thesis/thesis/: thesis.tex
Vortrag/: vortrag.tex
src/: CMakeLists.txt  avltree.c  avltree.h  dependency_analysis.c  dependency_analysis.h  disas.c  disas.h  graph.c  graph.h  hashmap.c  hashmap.h  hashset.c  hashset.h  headers.h  inst_list.c  inst_list.h  macho.c  macho.h  main.c  makefile  pecoff.cpp  pecoff.h  reg_map.c  reg_map.h  reservation_station.c  reservation_station.h  sim_inst.c  sim_inst.h  util.c  util.h  xed-disas-elf.c  xed-disas-elf.h  xed-disas-macho.c  xed-disas-macho.h  xed-disas-pecoff.cpp  xed-disas-pecoff.h  xed-examples-util.c  xed-examples-util.h  xed-symbol-table.c  xed-symbol-table.h  (+4 more)
tables/: BDW.arch  HSW.arch  IVB.arch  KBL.arch  NHM.arch
